Added RequestBody annotation.
